fix spacing homepage

--- a/components/footerjusteat/style.css
+++ b/components/footerjusteat/style.css
@@ -4,10 +4,7 @@
     display:flex;
     flex-direction: column;
     background-color: #efedea;
-    width: 100%;
-    margin-top: 1000px;
-    
-    
+    width: 100%;  
 }
 
 /* .container{
