--- a/layout-sezione-applicazioni/style.css
+++ b/layout-sezione-applicazioni/style.css
@@ -7,6 +7,7 @@ body{
 display: flex;
 justify-content:space-evenly ;
 margin-top: 5rem;
+margin-bottom: 5rem;
 align-items: center;
 }
 
@@ -14,8 +15,9 @@ h1{
     text-align: center;
 }
 
-.smartphone >img{
-    height: 260px;
+.smartphone > img{
+    max-height: 270px;
+    width: 100%;
 
 }
 
@@ -33,8 +35,7 @@ h1{
 
 .button{
     display: flex;
-
-
+    justify-content: center;
 }
 .button > button{
     border: none;
